# pythonTestTask

./: .bashrc  .gitignore  LICENSE  README.md  main.py  pyproject.toml
app/database/: database.py
app/models/: user.py
app/routers/: user.py
app/schemas/: user.py
tests/: conftest.py  test_user.py
